# attrs

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  887.breaking.rst  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Dockerfile  Github-setup.md  LICENSE  MANIFEST.in  PROBLEM.md  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  Test.patch  azure-pipelines.yml  classification.md  commit.txt  conftest.py  description.md  dev-requirements.txt  docs-requirements.txt  mypy-pytest.ini  mypy.ini  package-lock.json  package.json  pom.xml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  (+6 more)
.github/: AI_POLICY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/workflows/: build-docset.yml  ci.yml  codeql-analysis.yml  codspeed.yml  main.yml  pinact.yml  pypi-package.yml  zizmor.yml
attr/: __init__.py  _compat.py  _config.py  _dunders.py  _funcs.py  _make.py  filters.py  validators.py
bench/: test_benchmarks.py
changelog.d/: 1001.change.md  1001.change.rst  1009.change.md  1009.change.rst  1010.change.md  1010.change.rst  1016.doc.rst  1017.deprecation.rst  1027.change.md  1027.change.rst  1065.change.md  1065.change.rst  1066.change.rst  1068.change.md  1068.change.rst  1079.change.md  1081.change.md  1084.change.md  1085.change.md  1090.change.md  1092.change.md  1099.change.md  1105.change.md  1107.change.md  1117.change.md  1120.deprecation.md  1122.change.md  1141.change.md  1147.change.md  1158.change.md  1165.change.md  1172.change.md  1180.change.md  1187.change.md  1200.change.md  1203.change.md  1203.feature.md  1221.change.md  1234.change.md  1253.change.md  (+223 more)
docs/: Makefile  api-attr.rst  api.rst  backward-compatibility.rst  changelog.md  changelog.rst  comparison.md  comparison.rst  conf.py  contributing.rst  doctest2.py  examples.md  examples.rst  extending.md  extending.rst  glossary.md  glossary.rst  hashing.md  hashing.rst  how-does-it-work.md  how-does-it-work.rst  index.md  index.rst  init.md  init.rst  license.md  license.rst  names.md  names.rst  overview.md  overview.rst  python-2.rst  types.md  types.rst  why.md  why.rst
src/attr/: __init__.py  __init__.pyi  _auto.py  _cmp.py  _cmp.pyi  _compat.py  _config.py  _funcs.py  _hash_cache.py  _make.py  _next_gen.py  _props.py  _typing_compat.pyi  _version.py  _version.pyi  attred.py  converters.py  converters.pyi  exceptions.py  exceptions.pyi  filters.py  filters.pyi  hooks.py  mypy.py  setters.py  setters.pyi  validators.py  validators.pyi
src/attrs/: __init__.py  __init__.pyi  converters.py  custom_fields.py  exceptions.py  filters.py  setters.py  sphinx_cached_property.py  validators.py
stubs/: mypy.tests.py  setup.py  test_stubs.py
tests/: __init__.py  _test_annotations.py  attr_import_star.py  conftest.py  coverage_process_startup.pth  dataclass_transform_example.py  explicit-autoproperty-cached.rst  index.rst  members-cached-property.rst  mypy_pytest_plugin.py  strategies.py  test_3rd_party.py  test_abc.py  test_alias_validation.py  test_annotations.py  test_attred.py  test_auto.py  test_benchmarks.py  test_cmp.py  test_compat.py  test_config.py  test_converters.py  test_custom_fields.py  test_dark_magic.py  test_dunders.py  test_factory_validation_order.py  test_filters.py  test_forward_references.py  test_funcs.py  test_functional.py  test_hash.py  test_hooks.py  test_import.py  test_init_subclass.py  test_make.py  test_mypy.yml  test_next_gen.py  test_packaging.py  test_pattern_matching.py  test_pyright.py  (+11 more)
tests/doctest_data/: index.txt  members-cached-property.rst
typing-examples/: README.md  baseline.py  baseline_examples.py  mypy.py  mypy_examples.py
