[bdist_wheel]
universal = 1


[metadata]
# ensure LICENSE is included in wheel metadata
license_file = LICENSE


[tool:pytest]
minversion = 3.0
strict = true
addopts = -ra
testpaths = tests
filterwarnings =
    once::Warning


[isort]
atomic=true
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip=__init__.py

known_first_party=attr
known_third_party=UserDict,attr,hypothesis,pympler,pytest,setuptools,six,zope
